modified structured data

--- a/coding.html
+++ b/coding.html
@@ -64,11 +64,77 @@
             "@type": "WebPage",
             "name": "Coding Projects",
             "abstract": "My coding projects! Descriptions are given for each. Where possible, links to the code are provided",
-            "copyrightHolder": "Pete Smith",
+            "copyrightHolder": {
+                        "@context": "https://schema.org/",
+                        "@type": "Person",
+                        "name": "Pete Smith",
+                        "additionalName": "Peter Smith",
+                        "sameAs": ["https://www.linkedin.com/in/petesmith-umd/", "https://github.com/psmit703", "https://scholar.google.com/citations?user=V1INASUAAAAJ", "https://orcid.org/0009-0007-6678-6164"],
+                        "jobTitle": ["Web Development Intern", "History Intern"],
+                        "worksFor": ["NASA PDS Small Bodies Node at the University of Maryland", "Enslaved.org's Journal of Slavery and Data Preservation"],
+                        "telephone": "(443) 254-2441",
+                        "email": ["pete@psmit.dev", "psmit703@outlook.com", "psmith23@terpmail.umd.edu"],
+                        "workLocation": {
+                                            "@context": "https://schema.org/",
+                                            "@type": "Place",
+                                            "address": {
+                                                            "@context": "https://schema.org/",
+                                                            "@type": "PostalAddress",
+                                                            "addressLocality": "Washington",
+                                                            "addressRegion": "District of Columbia",
+                                                            "addressCountry": "USA"
+                                                        }
+                        },
+                        "knowsLanguage": ["en", "en-US"]
+                     },
             "copyrightNotice": "© 2023 Pete Smith",
             "copyrightYear": "2023",
-            "creator": "Pete Smith",
-            "author": "Pete Smith",
+            "creator": {
+                        "@context": "https://schema.org/",
+                        "@type": "Person",
+                        "name": "Pete Smith",
+                        "additionalName": "Peter Smith",
+                        "sameAs": ["https://www.linkedin.com/in/petesmith-umd/", "https://github.com/psmit703", "https://scholar.google.com/citations?user=V1INASUAAAAJ", "https://orcid.org/0009-0007-6678-6164"],
+                        "jobTitle": ["Web Development Intern", "History Intern"],
+                        "worksFor": ["NASA PDS Small Bodies Node at the University of Maryland", "Enslaved.org's Journal of Slavery and Data Preservation"],
+                        "telephone": "(443) 254-2441",
+                        "email": ["pete@psmit.dev", "psmit703@outlook.com", "psmith23@terpmail.umd.edu"],
+                        "workLocation": {
+                                            "@context": "https://schema.org/",
+                                            "@type": "Place",
+                                            "address": {
+                                                            "@context": "https://schema.org/",
+                                                            "@type": "PostalAddress",
+                                                            "addressLocality": "Washington",
+                                                            "addressRegion": "District of Columbia",
+                                                            "addressCountry": "USA"
+                                                        }
+                        },
+                        "knowsLanguage": ["en", "en-US"]
+                     },
+            "author": {
+                        "@context": "https://schema.org/",
+                        "@type": "Person",
+                        "name": "Pete Smith",
+                        "additionalName": "Peter Smith",
+                        "sameAs": ["https://www.linkedin.com/in/petesmith-umd/", "https://github.com/psmit703", "https://scholar.google.com/citations?user=V1INASUAAAAJ", "https://orcid.org/0009-0007-6678-6164"],
+                        "jobTitle": ["Web Development Intern", "History Intern"],
+                        "worksFor": ["NASA PDS Small Bodies Node at the University of Maryland", "Enslaved.org's Journal of Slavery and Data Preservation"],
+                        "telephone": "(443) 254-2441",
+                        "email": ["pete@psmit.dev", "psmit703@outlook.com", "psmith23@terpmail.umd.edu"],
+                        "workLocation": {
+                                            "@context": "https://schema.org/",
+                                            "@type": "Place",
+                                            "address": {
+                                                            "@context": "https://schema.org/",
+                                                            "@type": "PostalAddress",
+                                                            "addressLocality": "Washington",
+                                                            "addressRegion": "District of Columbia",
+                                                            "addressCountry": "USA"
+                                                        }
+                        },
+                        "knowsLanguage": ["en", "en-US"]
+                     },
             "license": "https://creativecommons.org/licenses/by-nc-sa/4.0/",
             "relatedLink": "https://github.com/psmit703"
         }
