--- a/resume.html
+++ b/resume.html
@@ -65,24 +65,101 @@
     "name": "Résumé",
     "abstract": "My technical and humanities résumés! Each is displayed as text and links are provided for PDF
     downloads",
-    "copyrightHolder": "Pete Smith",
+    "copyrightHolder": {
+                        "@context": "https://schema.org/",
+                        "@type": "Person",
+                        "name": "Pete Smith",
+                        "additionalName": "Peter Smith",
+                        "sameAs": ["https://www.linkedin.com/in/petesmith-umd/", "https://github.com/psmit703", "https://scholar.google.com/citations?user=V1INASUAAAAJ", "https://orcid.org/0009-0007-6678-6164"],
+                        "jobTitle": ["Web Development Intern", "History Intern"],
+                        "worksFor": ["NASA PDS Small Bodies Node at the University of Maryland", "Enslaved.org's Journal of Slavery and Data Preservation"],
+                        "telephone": "(443) 254-2441",
+                        "email": ["pete@psmit.dev", "psmit703@outlook.com", "psmith23@terpmail.umd.edu"],
+                        "workLocation": {
+                                            "@context": "https://schema.org/",
+                                            "@type": "Place",
+                                            "address": {
+                                                            "@context": "https://schema.org/",
+                                                            "@type": "PostalAddress",
+                                                            "addressLocality": "Washington",
+                                                            "addressRegion": "District of Columbia",
+                                                            "addressCountry": "USA"
+                                                        }
+                        },
+                        "knowsLanguage": ["en", "en-US"]
+                     },
     "copyrightNotice": "© 2023 Pete Smith",
     "copyrightYear": "2023",
-    "creator": "Pete Smith",
-    "author": "Pete Smith",
+    "creator": {
+                        "@context": "https://schema.org/",
+                        "@type": "Person",
+                        "name": "Pete Smith",
+                        "additionalName": "Peter Smith",
+                        "sameAs": ["https://www.linkedin.com/in/petesmith-umd/", "https://github.com/psmit703", "https://scholar.google.com/citations?user=V1INASUAAAAJ", "https://orcid.org/0009-0007-6678-6164"],
+                        "jobTitle": ["Web Development Intern", "History Intern"],
+                        "worksFor": ["NASA PDS Small Bodies Node at the University of Maryland", "Enslaved.org's Journal of Slavery and Data Preservation"],
+                        "telephone": "(443) 254-2441",
+                        "email": ["pete@psmit.dev", "psmit703@outlook.com", "psmith23@terpmail.umd.edu"],
+                        "workLocation": {
+                                            "@context": "https://schema.org/",
+                                            "@type": "Place",
+                                            "address": {
+                                                            "@context": "https://schema.org/",
+                                                            "@type": "PostalAddress",
+                                                            "addressLocality": "Washington",
+                                                            "addressRegion": "District of Columbia",
+                                                            "addressCountry": "USA"
+                                                        }
+                        },
+                        "knowsLanguage": ["en", "en-US"]
+                     },
+    "author": {
+                        "@context": "https://schema.org/",
+                        "@type": "Person",
+                        "name": "Pete Smith",
+                        "additionalName": "Peter Smith",
+                        "sameAs": ["https://www.linkedin.com/in/petesmith-umd/", "https://github.com/psmit703", "https://scholar.google.com/citations?user=V1INASUAAAAJ", "https://orcid.org/0009-0007-6678-6164"],
+                        "jobTitle": ["Web Development Intern", "History Intern"],
+                        "worksFor": ["NASA PDS Small Bodies Node at the University of Maryland", "Enslaved.org's Journal of Slavery and Data Preservation"],
+                        "telephone": "(443) 254-2441",
+                        "email": ["pete@psmit.dev", "psmit703@outlook.com", "psmith23@terpmail.umd.edu"],
+                        "workLocation": {
+                                            "@context": "https://schema.org/",
+                                            "@type": "Place",
+                                            "address": {
+                                                            "@context": "https://schema.org/",
+                                                            "@type": "PostalAddress",
+                                                            "addressLocality": "Washington",
+                                                            "addressRegion": "District of Columbia",
+                                                            "addressCountry": "USA"
+                                                        }
+                        },
+                        "knowsLanguage": ["en", "en-US"]
+                     },
     "license": "https://creativecommons.org/licenses/by-nc-sa/4.0/",
     "about": {
-                "@context": "https://schema.org/",
-                "@type": "Person",
-                "name": "Pete Smith",
-                "additionalName": "Peter Smith",
-                "jobTitle": "Web Development Intern",
-                "affiliation": "NASA PDS Small Bodies Node at the University of Maryland",
-                "telephone": "(443) 254-2441",
-                "email": "psmit703@outlook.com",
-                "workLocation": "Washington, D.C.",
-                "knowsLanguage": "en, en-US"
-             }
+                        "@context": "https://schema.org/",
+                        "@type": "Person",
+                        "name": "Pete Smith",
+                        "additionalName": "Peter Smith",
+                        "sameAs": ["https://www.linkedin.com/in/petesmith-umd/", "https://github.com/psmit703", "https://scholar.google.com/citations?user=V1INASUAAAAJ", "https://orcid.org/0009-0007-6678-6164"],
+                        "jobTitle": ["Web Development Intern", "History Intern"],
+                        "worksFor": ["NASA PDS Small Bodies Node at the University of Maryland", "Enslaved.org's Journal of Slavery and Data Preservation"],
+                        "telephone": "(443) 254-2441",
+                        "email": ["pete@psmit.dev", "psmit703@outlook.com", "psmith23@terpmail.umd.edu"],
+                        "workLocation": {
+                                            "@context": "https://schema.org/",
+                                            "@type": "Place",
+                                            "address": {
+                                                            "@context": "https://schema.org/",
+                                                            "@type": "PostalAddress",
+                                                            "addressLocality": "Washington",
+                                                            "addressRegion": "District of Columbia",
+                                                            "addressCountry": "USA"
+                                                        }
+                        },
+                        "knowsLanguage": ["en", "en-US"]
+                     }
     }
     </script>
 </head>
