added XML sitemap

--- a/sitemap.html
+++ b/sitemap.html
@@ -129,6 +129,7 @@
                     <ul style="list-style-type: none; padding: 0px;">
                         <li><a href=" /">Home Page</a></li>
                         <li><a href="/resume.html">Résumé</a></li>
+                        <li><a href="/publications.html">Publications</a></li>
                         <li><a href="/coding.html">Coding Projects</a></li>
                         <li><a href="/writing.html">Writing Samples</a></li>
                     </ul>
@@ -163,6 +164,7 @@
                     <ul style="list-style-type: none; padding: 0px;">
                         <li><a href="/404.html">Error 404 Page</a></li>
                         <li><a href="/template.html">Template Page</a></li>
+                        <li><a href="/sitemap.xml">XML Sitemap</a></li>
                     </ul>
 
                     <div class="sitemap-spacing"></div>
