--- a/coding.html
+++ b/coding.html
@@ -208,7 +208,8 @@
             <div id="mult-ret-vals" class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
-                        <h5 class="card-title">Final Project: Multiple Return Values<span style="float: right;">(Dec
+                        <h5 class="card-title">Final Project: Multiple Return Values (Racket, x86)<span
+                                style="float: right;">(Dec
                                 2023 - Dec 2023)</span></h5>
                         <p class="card-text">This is the final project for <i>CMSC430: Introduction to Compilers</i>.
                             The project extends on cumulative knowledge and experience from the entire semester. Through
@@ -230,7 +231,7 @@
             <div id="squid-games" class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
-                        <h5 class="card-title">Squid Games<span style="float: right;">(Nov
+                        <h5 class="card-title">Squid Games (Racket)<span style="float: right;">(Nov
                                 2023 - Nov
                                 2023)</span></h5>
                         <p class="card-text">This project extends on the knowledge of the previous project, Fraud Plus.
@@ -254,7 +255,7 @@
             <div id="fraud-plus" class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
-                        <h5 class="card-title">Fraud Plus: Interpreter and Compiler (Racket)<span
+                        <h5 class="card-title">Fraud Plus: Interpreter and Compiler (Racket, x86)<span
                                 style="float: right;">(Oct
                                 2023 - Nov
                                 2023)</span></h5>
@@ -291,7 +292,7 @@
             <div id="dupe-plus" class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
-                        <h5 class="card-title">Dupe Plus: Parser, Interpreter, and Compiler (Racket)<span
+                        <h5 class="card-title">Dupe Plus: Parser, Interpreter, and Compiler (Racket, x86)<span
                                 style="float: right;">(Sep 2023 - Oct
                                 2023)</span></h5>
                         <p class="card-text">Dupe Plus is an extension of Dupe, a programming language created by the
