modified personal website in coding.html

--- a/coding.html
+++ b/coding.html
@@ -405,14 +405,16 @@
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
                         <h5 class="card-title">This website! (HTML, CSS, JavaScript)<span style="float: right;">(Jun
-                                2023 - Present)</span>
+                                2023 - Dec 2023)</span>
                         </h5>
                         <p class="card-text">My personal website! Yay! This is a static site hosted by GitHub Pages. In
-                            addition to the standard HTML, CSS, and JavaScript, it makes use of Bootstrap for
-                            some of the stylization, jQuery for ensuring Promise resolution, and GitHub's REST API for
-                            loading
-                            changelog content. The site also makes use of Plausible Analytics and Clicky Website
-                            Analytics for generating privacy-friendly usage statistics.</p>
+                            addition to the standard HTML, CSS, and JavaScript, it makes use of Bootstrap along with
+                            custom CSS for stylization and JavaScript for various functionalities such as displaying a
+                            random image on the home page, toggleable dark mode, and navigation bar animations. The site
+                            uses structured data (Schema.org / JSON-LD) to better interact with search engines and
+                            incorporates Plausible Analytics and Clicky Website Analytics, which are both
+                            privacy-friendly alternatives to Google Analytics, to track viewing statistics. It also
+                            makes use of GitHub's REST API to display a recent changelog on the site itself.</p>
                         <a href="https://github.com/psmit703/personal-website" class="btn btn-primary card-link">GitHub
                             Repo</a>
                     </div>
