--- a/coding.html
+++ b/coding.html
@@ -209,8 +209,7 @@
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
                         <h5 class="card-title">Final Project: Multiple Return Values (Racket, x86)<span
-                                style="float: right;">(Dec
-                                2023 - Dec 2023)</span></h5>
+                                style="float: right;">(Dec 2023)</span></h5>
                         <p class="card-text">This is the final project for <i>CMSC430: Introduction to Compilers</i>.
                             The project extends on cumulative knowledge and experience from the entire semester. Through
                             considering material from each of the previous projects, Racket's multiple return values
@@ -232,7 +231,6 @@
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
                         <h5 class="card-title">Squid Games (Racket)<span style="float: right;">(Nov
-                                2023 - Nov
                                 2023)</span></h5>
                         <p class="card-text">This project extends on the knowledge of the previous project, Fraud Plus.
                             For Squid Games, we had to write a Racket
@@ -343,8 +341,8 @@
             <div id="racket-intro" class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
-                        <h5 class="card-title">Intro to Racket (Racket)<span style="float: right;">(Sep 2023 - Sep
-                                2023)</span></h5>
+                        <h5 class="card-title">Intro to Racket (Racket)<span style="float: right;">(Sep 2023)</span>
+                        </h5>
                         <p class="card-text">This is a collection of short Racket functions intended to familiarize
                             programmers with the language. It makes significant use of features such as pattern
                             matching and recursion, along with concepts such as lambda calculus.
@@ -426,8 +424,7 @@
             <div id="bloom-filter" class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
-                        <h5 class="card-title">Bloom Filter (Python)<span style="float: right;">(May 2023 - May
-                                2023)</span></h5>
+                        <h5 class="card-title">Bloom Filter (Python)<span style="float: right;">(May 2023)</span></h5>
                         <p class="card-text">Implemented insert, hash, rebuild, and search functions for a Bloom Filter.
                             Allows for arbitrary bit array length, number of hash functions, and max false-positive
                             probability. Automatically rebuilds the Bloom Filter when the false-positive probability is
@@ -448,7 +445,7 @@
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
                         <h5 class="card-title">Ghostbusters/Inference (Python)<span style="float: right;">(May
-                                2023 - May 2023)</span></h5>
+                                2023)</span></h5>
                         <p class="card-text">Implemented several functions relating to Bayes' Nets for a
                             Ghostbusters-themed Pacman game. Functions included
                             calculating probabilities based on given data, updating belief distributions based on
@@ -541,7 +538,7 @@
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
                         <h5 class="card-title">DFS, BFS, UCS, and A* Search (Python)<span style="float: right;">(Feb
-                                2023 - Feb 2023)</span></h5>
+                                2023)</span></h5>
                         <p class="card-text">Implemented Depth-First, Breadth-First, Uniform Cost, and A* Search
                             algorithms for a predesigned, non-adversarial Pacman
                             simulation. Also designed heuristic functions for specific problems.
@@ -562,7 +559,7 @@
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
                         <h5 class="card-title">"MicrOCaml" Lexer, Parser, and Interpreter (OCaml)<span
-                                style="float: right;">(Nov 2022 - Nov 2022)</span></h5>
+                                style="float: right;">(Nov 2022)</span></h5>
                         <p class="card-text">Implemented a lexer, recursive descent parser, and interpreter for
                             "MicrOCaml", a simplified version of OCaml defined by course faculty. Also implemented
                             MicrOCaml's REPL, "mutop". This project makes significant use of pattern matching and
