Updated privacy.html (minor word choice), README.md (additions), and sitemap.xml (last-modified dates)

--- a/privacy.html
+++ b/privacy.html
@@ -147,7 +147,7 @@
                     format) in order to change the alignment of menu items to prevent minor visual discrepancies</li>
                 <li>Determining whether or not a user's device has a dark mode preference and reading and/or writing
                     a cookie to save a user-specified dark mode preference, which is deleted automatically by the user's
-                    browser after 30 days or when the user deletes it through the menu at the bottom of each page,
+                    browser after 30 days or when the user deletes it through the button at the bottom of each page,
                     whichever comes first</li>
             </ul>
 
