added disclaimers to publications.html and writing.html

--- a/writing.html
+++ b/writing.html
@@ -194,6 +194,11 @@
 
             <div class="card-spacing"></div>
 
+            <h5 class="text-center"><i>Please note that any works that have been submitted for publication and have not
+                    yet undergone peer review will not be listed here</i></h5>
+
+            <div class="card-spacing"></div>
+
             <!-- begin paper descriptions -->
             <div id="visions-of-the-west" class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
