--- a/publications.html
+++ b/publications.html
@@ -196,6 +196,11 @@
 
             <div class="card-spacing"></div>
 
+            <h5 class="text-center"><i>Please note that any works that have been submitted for publication and have not
+                    yet undergone peer review will not be listed here</i></h5>
+
+            <div class="card-spacing"></div>
+
             <!-- begin publications -->
             <div id="comet-statistics" class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
