updated info in index.html, updated sitemap

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                         Some info about me:
 
                     <ul class="quick-facts-custom">
-                        <li>I'm a student/software developer in the Washington, DC area</li>
+                        <li>I'm a student/software engineer in the Washington, DC area</li>
                         <li>I'm a senior at the University of Maryland, College Park and am pursuing two degrees and a
                             minor:</li>
                         <ul>
@@ -251,7 +251,7 @@
                                 <li>Code maintainability (comments, modularity, etc.)</li>
                             </ul>
                         </li>
-                        <li>I have tangential interests in topics including compilers and programming language paradigms
+                        <li>I have general interests in programming languages and their implementations
                         </li>
                         <li>I am the (self-proclaimed) best ping pong player in the world
                             <ul>
@@ -260,7 +260,7 @@
                             </ul>
                         </li>
                         <li>My favorite word is "whatnot"</li>
-                        <li>I am in a never-ending search of the best breakfast sandwich in the DC area</li>
+                        <li>I am in a never-ending search for the best breakfast sandwich in the DC area</li>
                     </ul>
                     </p>
                 </div>
@@ -281,6 +281,10 @@
                 <div class="col-sm col-custom">
                     <img src="/assets/images/langs/ocaml.svg" class="langSVG" height="70px" title="OCaml" alt="OCaml">
                 </div>
+                <div class="col-sm col-custom">
+                    <img src="/assets/images/langs/racket.svg" class="langSVG" height="70px" title="Racket"
+                        alt="Racket">
+                </div>
             </div>
 
             <hr />
@@ -296,10 +300,6 @@
                 </div>
                 <div class="col-sm col-custom">
                     <img src="/assets/images/langs/ruby.svg" class="langSVG" height="70px" title="Ruby" alt="Ruby">
-                </div>
-                <div class="col-sm col-custom">
-                    <img src="/assets/images/langs/racket.svg" class="langSVG" height="70px" title="Racket"
-                        alt="Racket">
                 </div>
                 <div class="col-sm col-custom">
                     <img src="/assets/images/langs/html.svg" class="langSVG" height="70px" title="HTML5" alt="HTML5">
