--- a/sitemap.html
+++ b/sitemap.html
@@ -146,7 +146,7 @@
 
                     <ul style="list-style-type: none; padding: 0px;">
                         <li><a href=" /changelog.html">Changelog</a></li>
-                        <li><a href="/sitemap.html">Sitemap</a></li>
+                        <li><a href="/sitemap.html">Text Sitemap</a></li>
                         <li><a href="https://github.com/psmit703/personal-website">GitHub Repo (External)</a></li>
                         <li><a href=" /privacy.html">Privacy Notice</a></li>
                     </ul>
