minor change to index.html

--- a/index.html
+++ b/index.html
@@ -340,8 +340,7 @@
             <!-- various contact/profile links and related SVGs -->
             <div class="links-custom mx-5 my-5">
                 <h4 id="contact">Want to contact me, see my professional profiles, or challenge me to a game of ping
-                    pong? Look
-                    below!</h4>
+                    pong?</h4>
                 <div class="container">
                     <div class="row">
                         <div class="col-sm col-custom">
