added minecraft auto backups to coding.html
also specified CMSC430 for that class' final project

--- a/coding.html
+++ b/coding.html
@@ -205,10 +205,32 @@
             <div class="card-spacing"></div>
 
             <!-- begin project descriptions -->
+            <div id="minecraft-backups" class="card-wrapper d-flex justify-content-center">
+                <div class="card" style="width: 80%;">
+                    <div class="card-body">
+                        <h5 class="card-title">Minecraft (Java Edition) Auto Backups (Python)<span
+                                style="float: right;">(Jan 2024)</span>
+                        </h5>
+                        <p class="card-text">This is a utility for automatically creating backups of various Minecraft
+                            data. It reads in user-specified configuration data that determines which data to back up
+                            and has options to automatically delete old backups and display a GUI upon completion.
+                            <br><br>
+                            This program is designed to be used in conjunction with automation tools such as Windows
+                            Task Scheduler.
+                        </p>
+                        <a href="https://github.com/psmit703/minecraft-auto-backup"
+                            class="btn btn-primary card-link">GitHub
+                            Repo</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-spacing"></div>
+
             <div id="mult-ret-vals" class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
-                        <h5 class="card-title">Final Project: Multiple Return Values (Racket, x86)<span
+                        <h5 class="card-title">CMSC430 Final Project: Multiple Return Values (Racket, x86)<span
                                 style="float: right;">(Dec 2023)</span></h5>
                         <p class="card-text">This is the final project for <i>CMSC430: Introduction to Compilers</i>.
                             The project extends on cumulative knowledge and experience from the entire semester. Through
