--- a/resume.html
+++ b/resume.html
@@ -219,7 +219,7 @@
 
             <!-- title and download link for technical resume -->
             <h3 id="technical-resume" class="text-center">
-                Technical Résumé<br><a href="/assets/resumes/Pete_Smith_Resume_(Technical).pdf">PDF Download</a>
+                Technical Résumé<br><a href="/assets/resumes/Pete%20Smith%20Resume%20(Technical).pdf">PDF Download</a>
             </h3>
 
             <!-- begin technical resume -->
@@ -239,10 +239,9 @@
                 <ul>
                     <li>Dual Degree: Bachelor of Science, Computer Science; Bachelor of Arts, History</li>
                     <li>Minor, Trumpet Performance</li>
-                    <li>Cumulative GPA: 3.356 (Aug 2023)</li>
-                    <li>Relevant Coursework: Intro to Compilers; Intro to AI; Advanced
-                        Data
-                        Structures; Algorithms</li>
+                    <li>Cumulative GPA: 3.392 (Jan 2024)</li>
+                    <li>Relevant Coursework: Programming Language Paradigms, Cryptography, Intro to Compilers; Intro to
+                        AI; Advanced Data Structures; Algorithms</li>
                     <li>Member: Association for Computing Machinery; Multi-Agent Reinforcement Learning Reading Group;
                         History Undergraduate Association</li>
                 </ul>
@@ -250,38 +249,38 @@
 
             <h4>Skills and Attributes</h4>
             <ul>
-                <li>Languages: Python, Java, C, Rust, Ruby, OCaml, Racket, HTML, CSS, JavaScript, SQL</li>
-                <li>Frameworks: Bootstrap, jQuery, Plotly.js, Qt (PyQt) GUI</li>
-                <li>Tools and Environments: Linux, VS Code, Eclipse IDE, version control (Git)</li>
-                <li>Coding Skills: Debugging, good code readability</li>
-                <li>Other Skills: Written and oral communication, teamwork, critical thinking, customer service</li>
+                <li>Languages: Python, Java, Racket, OCaml, C, Rust, Ruby, HTML, CSS, JavaScript, SQL</li>
+                <li>Frameworks: Bootstrap, jQuery, Plotly.js</li>
+                <li>Tools and Environments: Linux, VS Code, Eclipse IDE, version control (Git/GitHub)</li>
+                <li>Coding Skills: Functional programming, debugging, good code readability</li>
             </ul>
 
             <h4>Programming Projects</h4>
             <ul>
                 <li><strong>Comet Statistics (HTML, CSS, JS, Python, SQL)<span style="float: right">(Web Dev Intern at
                             UMD,
-                            Jun 2023 - Present)</span></strong></li>
+                            Jun 2023 - Dec 2023)</span></strong></li>
                 <ul>
-                    <li>Using Plotly.js to render comet discovery, orbital element, and observation statistics in graph
+                    <li>Uses Plotly.js to render comet discovery, orbital element, and observation statistics in graph
                         form
                     </li>
-                    <li>Using Python to create an automated backend script that pulls from a local PostgreSQL database
+                    <li>Used Python to create an automated backend script that pulls from a local PostgreSQL database
                         and multiple external databases; accounts for numerous subtleties in the way comet data is
                         represented</li>
                     <li>Presented the site as a contributed talk at the 33rd annual ADASS conference on Nov 8, 2023</li>
                     <li><a href="https://sbnmpc.astro.umd.edu/cometInfo/">https://sbnmpc.astro.umd.edu/cometInfo/</a>
-                        (note: site still in development)</li>
+                    </li>
                 </ul>
                 <li><strong>Personal Website (HTML, CSS, JS)<span style="float: right">(Personal Project, Jun 2023 -
-                            Present)</span></strong></li>
+                            Dec 2023)</span></strong></li>
                 <ul>
-                    <li>Designing a website ( <a href="https://psmit.dev/">https://www.psmit.dev/</a> ) focusing on user
+                    <li>Designed a website ( <a href="https://psmit.dev/">https://www.psmit.dev/</a> ) focusing on user
                         experience and mobile readiness</li>
-                    <li>Using JavaScript to implement features such as dark mode preference and nav bar animations</li>
-                    <li>Making calls to GitHub's REST API to display the ten most recent site changes</li>
+                    <li>Used JavaScript to implement features including dark mode preference and nav bar animations</li>
+                    <li>Makes calls to GitHub's REST API to display the ten most recent site changes</li>
                 </ul>
-                <li><strong>Fraud Plus: Interpreter and Compiler (Racket)<span style="float: right">(Intro to Compilers
+                <li><strong>Fraud Plus: Interpreter and Compiler (Racket, x86)<span style="float: right">(Intro to
+                            Compilers
                             at UMD, Oct 2023 - Nov
                             2023)</span></strong></li>
                 <ul>
@@ -299,11 +298,12 @@
 
             <h4>Work Experience</h4>
             <ul>
-                <li><strong>Web Development Intern (University of Maryland)<span style="float: right">(Jun
+                <li><strong>Web Development Intern (University of Maryland Department of Astronomy)<span
+                            style="float: right">(Jun
                             2023 -
                             Present)</span></strong></li>
                 <ul>
-                    <li>Creating a comet statistic site for the NASA Planetary Data System Small Bodies Node at UMD</li>
+                    <li>Created a comet statistic site for the NASA Planetary Data System Small Bodies Node at UMD</li>
                     <li>Creating a tool to automate converting from the "new" comet designation system to the "old"
                         system</li>
                     <li>Gaining a strong understanding of SQL, interacting with web APIs, and general web development
@@ -317,7 +317,7 @@
             <!-- title and download link for humanities resume -->
             <h3 id="humanities-resume" class="text-center">
                 Humanities
-                Résumé<br><a href="/assets/resumes/Pete_Smith_Resume_(Humanities).pdf">PDF Download</a>
+                Résumé<br><a href="/assets/resumes/Pete%20Smith%20Resume%20(Humanities).pdf">PDF Download</a>
             </h3>
 
             <!-- begin humanities resume -->
@@ -335,10 +335,9 @@
                 <ul>
                     <li>Dual Degree: BA, History; BS, Computer Science</li>
                     <li>Minor, Trumpet Performance</li>
-                    <li>Cumulative GPA: 3.356 (Aug 2023)</li>
-                    <li>Relevant Coursework: Immigration and Ethnicity in the U.S.; Civil War and
-                        Industrialization (1860-1900); Antebellum America (1815-1861); Sex and Class in Victorian
-                        Britain</li>
+                    <li>Cumulative GPA: 3.392 (January 2024)</li>
+                    <li>Relevant Coursework: Women and War in U.S. History; Immigration and Ethnicity in the U.S.;
+                        Emergence of Modern America (1900-1945); Civil War and Industrialization (1860-1900)</li>
                     <li>Member: History Undergraduate Association; Association for Computing Machinery; Multi-Agent
                         Reinforcement Learning Reading Group</li>
                 </ul>
@@ -347,18 +346,20 @@
             <ul>
                 <li><strong>History Intern (Enslaved.org: Journal of Slavery and Data Preservation)<span
                             style="float: right">(August
-                            2023 - Present)</span></strong></li>
+                            2023 - December 2023)</span></strong></li>
                 <ul>
-                    <li>Collaborate with a team at Virginia Tech to research runaway enslaved persons and indentured
-                        servants in colonial Virginia and Maryland</li>
-                    <li>Analyze contemporary documents to record biographical information of runaways and to establish
-                        context surrounding their attempts</li>
-                    <li>Create a user guide to introduce students to the project and its dataset</li>
+                    <li>Collaborated with a team at Virginia Tech on “Dangerous Harbor,” an NEH-funded project
+                        researching runaway indentured servants and enslaved people in colonial Virginia and Maryland
+                    </li>
+                    <li>Analyzed contemporary documents to record biographical information of runaways and to establish
+                        context surrounding their escape attempts</li>
+                    <li>Created a user guide to introduce students to the project and its dataset</li>
                 </ul>
-                <li><strong>Web Development Intern (University of Maryland)<span style="float: right">(June 2023 -
+                <li><strong>Web Development Intern (University of Maryland Department of Astronomy)<span
+                            style="float: right">(June 2023 -
                             Present)</span></strong></li>
                 <ul>
-                    <li>Create a comet statistic site for the NASA Planetary Data System Small Bodies Node at UMD</li>
+                    <li>Created a comet statistic site for the NASA Planetary Data System Small Bodies Node at UMD</li>
                     <li>Presented <i>Comet Statistics</i> as a contributed talk at the 33rd annual ADASS conference in
                         Nov 2023</li>
                     <li>Develop a tool to automate converting from the "new" to the "old" IAU comet designation system
@@ -367,31 +368,27 @@
             </ul>
             <h4>Selected Papers</h4>
             <ul>
-                <li><strong>"<i>American Notes</i>: Exploring Antebellum Institutionalism"<span
-                            style="float: right">(Antebellum America at UMD, April 2023)</span></strong></li>
+                <li><strong>"Running Away from the Future"<span style="float: right">(History Intern at Enslaved.org,
+                            December 2023)</span></strong></li>
                 <ul>
-                    <li>In the context of the critiques in Charles Dickens' <i>American Notes</i>, this paper examines a
-                        variety of
-                        institutions central to Antebellum America. The paper explores the nature of institutions
-                        including
-                        slavery, prison reform, and mental asylums, contextualized by other contemporary and modern
-                        authors
-                        including Alexis de Tocqueville and David J. Rothman, in order to show these institutions' roles
-                        in the
-                        rapidly increasing societal division seen at the time.
+                    <li>This research paper examines runaway indentured servants and enslaved people in
+                        seventeenth-century Virginia and Maryland, along with their surrounding legal landscape, to
+                        establish their specific reasons for running away and the considerations they had to make. By
+                        accounting for their conditions and increasingly harsh punishments, including with respect to
+                        race, this paper argues that the changing legal landscape served as both a motivation and a
+                        deterrent for those running away.
                     </li>
                 </ul>
-                <li><strong>"Masculinity in Victorian Britain"<span style="float: right">(Sex and Class in Victorian
-                            Britain at UMD, November
-                            2022)</span></strong></li>
+                <li><strong>"Welcome to the West, it's been waiting for you"<span style="float: right">(Civil War and...
+                            at UMD, November
+                            2023)</span></strong></li>
                 <ul>
-                    <li>This paper explores the various elements of what it meant to be masculine in Victorian Britain,
-                        namely
-                        control of oneself and one's environment and the physical strength that was required. By
-                        examining
-                        contemporary and modern sources including Rudyard Kipling's “William the Conqueror” and Nadja
-                        Durbach's “Monstrosity, Masculinity, and Medicine,” the paper shows how systemic masculinity was
-                        spread and how it was both accepted and challenged throughout society.
+                    <li>Through analyzing Laura Ingalls Wilder's Little House series and Willa Cather's My Ántonia, this
+                        paper argues that, in the decades following the westward expansion seen in the mid-to-late
+                        nineteenth century, popular media romanticized it to serve as a distraction from the pressing
+                        events of World War I and the Great Depression. This paper shows that these books simultaneously
+                        gave contemporary readers a means of escape and painted a nuanced picture of life in the
+                        American West.
                     </li>
                 </ul>
             </ul>
@@ -399,8 +396,8 @@
             <ul>
                 <li>Skills: Written and oral communication, critical thinking, research, teamwork, customer service</li>
                 <li>Attributes: Punctual, efficient, organized</li>
-                <li>Software: Proficient in Microsoft Office and Google Docs Suites</li>
-                <li>Technical Skills: Python, Java, C, Rust, Ruby, OCaml, Racket, HTML, CSS, JavaScript, SQL</li>
+                <li>Software: Proficient in Microsoft Office Suite, Google Docs Suite, and OpenRefine</li>
+                <li>Technical Skills: Python, Java, Racket, OCaml, C, Rust, Ruby, HTML, CSS, JavaScript, SQL</li>
             </ul>
             <!-- end humanities resume -->
 
